Done with user data upload and added Navigator service for menu redirections

--- a/Front-end/src/app/whatsapp-module/menu/whatsapp-menu.component.html
+++ b/Front-end/src/app/whatsapp-module/menu/whatsapp-menu.component.html
@@ -11,14 +11,14 @@
                         <li class="nav-item">
                             <a class="nav-link" [class.active]="selectedMenu === 'create-template'" (click)="selectMenu('create-template')">Create Template</a>
                         </li>
-                        <li class="nav-item">
+                        <!-- <li class="nav-item">
                             <a class="nav-link" [class.active]="selectedMenu === 'configure-template'" (click)="selectMenu('configure-template')">Configure Template</a>
+                        </li> -->
+                        <li class="nav-item">
+                            <a class="nav-link" [class.active]="selectedMenu === 'view-user-data'" (click)="selectMenu('view-user-data')">Select Users</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" [class.active]="selectedMenu === 'upload-user-data'" (click)="selectMenu('upload-user-data')">Upload User Data</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" [class.active]="selectedMenu === 'view-user-data'" (click)="selectMenu('view-user-data')">View User Data</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" [class.active]="selectedMenu === 'preview-and-send'" (click)="selectMenu('preview-and-send')">Preview and Send</a>
