--- a/Front-end/src/app/whatsapp-module/upload-user-data/upload-user-data.component.css
+++ b/Front-end/src/app/whatsapp-module/upload-user-data/upload-user-data.component.css
@@ -25,6 +25,11 @@
 
 .actions button {
   margin-left: 10px;
+  background-color: #007bff;
+  border-radius: 10px;
+  padding: 10px;
+  border: none;
+  color: white;
 }
 
 .popupform,
