--- a/Front-end/src/app/whatsapp-module/upload-user-data/upload-user-data.component.html
+++ b/Front-end/src/app/whatsapp-module/upload-user-data/upload-user-data.component.html
@@ -1,7 +1,7 @@
 <div class="container">
     <div class="header">
       <div>
-        <h2>SMS-Service</h2>
+        <h2>WhatsApp Service</h2>
         <h3>Select Users</h3>
       </div>
   
@@ -37,9 +37,9 @@
       <table>
         <thead>
           <tr>
-            <th></th>
+            <th>Select</th>
             <th>Name</th>
-            <th>Phone Number</th>
+            <th>WhatsApp Number</th>
           </tr>
         </thead>
         <tbody>
