--- a/Front-end/src/app/whatsapp-module/menu/whatsapp-menu.component.html
+++ b/Front-end/src/app/whatsapp-module/menu/whatsapp-menu.component.html
@@ -11,9 +11,9 @@
                         <li class="nav-item">
                             <a class="nav-link" [class.active]="selectedMenu === 'create-template'" (click)="selectMenu('create-template')">Create Template</a>
                         </li>
-                        <!-- <li class="nav-item">
+                        <li class="nav-item">
                             <a class="nav-link" [class.active]="selectedMenu === 'configure-template'" (click)="selectMenu('configure-template')">Configure Template</a>
-                        </li> -->
+                        </li>
                         <li class="nav-item">
                             <a class="nav-link" [class.active]="selectedMenu === 'view-user-data'" (click)="selectMenu('view-user-data')">Select Users</a>
                         </li>
