Added vuew and upload data functionality to the the WhatsApp module

--- a/Front-end/src/app/whatsapp-module/configure-template/configure-template.component.html
+++ b/Front-end/src/app/whatsapp-module/configure-template/configure-template.component.html
@@ -1,5 +1,5 @@
 <div>
-    <h1><strong>Modify Template</strong></h1>
+    <h1><strong>Configure Template</strong></h1>
     <form (ngSubmit)="onSubmit()" #templateForm="ngForm" class="form">
         <div class="fields">
             <label for="name">Template Name:</label>
