--- a/Front-end/src/app/whatsapp-module/menu/whatsapp-menu.component.html
+++ b/Front-end/src/app/whatsapp-module/menu/whatsapp-menu.component.html
@@ -15,7 +15,7 @@
                             <a class="nav-link" [class.active]="selectedMenu === 'configure-template'" (click)="selectMenu('configure-template')">Configure Template</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" [class.active]="selectedMenu === 'view-user-data'" (click)="selectMenu('view-user-data')">Select Users</a>
+                            <a class="nav-link" [class.active]="selectedMenu === 'select-recipients'" (click)="selectMenu('select-recipients')">Select Recipients</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" [class.active]="selectedMenu === 'upload-user-data'" (click)="selectMenu('upload-user-data')">Upload User Data</a>
@@ -33,7 +33,7 @@
                     <app-select-template *ngIf="selectedMenu === 'select-template'"></app-select-template>
                     <app-create-WhatsApp-template *ngIf="selectedMenu === 'create-template'"></app-create-WhatsApp-template>
                     <app-configure-WhatsApp-template *ngIf="selectedMenu === 'configure-template'"></app-configure-WhatsApp-template>
-                    <app-view-WhatsApp-user-data *ngIf="selectedMenu === 'view-user-data'"></app-view-WhatsApp-user-data>
+                    <app-view-WhatsApp-user-data *ngIf="selectedMenu === 'select-recipients'"></app-view-WhatsApp-user-data>
                     <app-upload-WhatsApp-user-data *ngIf="selectedMenu === 'upload-user-data'"></app-upload-WhatsApp-user-data>
                     <app-send-whatsapp *ngIf="selectedMenu === 'preview-and-send'"></app-send-whatsapp>
                 </div>
