--- a/Front-end/src/app/email-module/send-email/send-email.component.css
+++ b/Front-end/src/app/email-module/send-email/send-email.component.css
@@ -100,3 +100,23 @@
 .alert-success {
   background-color: #4CAF50; /* Green */
 }
+
+.selected-users-box {
+  border: 1px solid #ccc;
+  padding: 10px;
+  margin-bottom: 20px;
+  background-color: #f9f9f9;
+}
+
+.selected-users-box h3 {
+  margin-top: 0;
+}
+
+.selected-users-box ul {
+  list-style-type: none;
+  padding: 0;
+}
+
+.selected-users-box li {
+  margin-bottom: 10px;
+}
