--- a/Front-end/src/app/email-module/docs/docs.component.html
+++ b/Front-end/src/app/email-module/docs/docs.component.html
@@ -3,7 +3,7 @@
 
     <h2>Overview</h2>
     <div>
-        <p>The Email Service is designed to streamline the process of sending notifications and managing email templates
+        <p>The Email Notifier Service is designed to streamline the process of sending notifications and managing email templates
             within an application. It provides a flexible interface for creating, configuring, and sending emails, as
             well
             as viewing user data and email history.</p>
@@ -76,14 +76,13 @@
             following
             functionalities:</p>
         <ul>
-            <li><strong>Welcome Screen</strong>: A default view welcoming users to the Smart Email Notifier.</li>
             <li><strong>Create Template</strong>: Interface for creating new email templates.</li>
             <li><strong>Configure Template</strong>: Allows users to configure existing email templates.</li>
-            <li><strong>View User Data</strong>: Displays user data relevant to the email service.</li>
+            <li><strong>View User Data</strong>: Displays user data relevant to the email service and select users to send email.</li>
             <li><strong>Upload User Data</strong>: Provides an option to upload user data for email targeting.</li>
             <li><strong>Send Email</strong>: Interface for sending emails using configured templates.</li>
             <li><strong>History</strong>: Shows the history of sent emails for tracking and auditing purposes.</li>
-            <li><strong>Docs</strong>: Displays the documentation to understand the platform interface and learn about
+            <li><strong>Docs</strong>: (default) Displays the documentation to understand the platform interface and learn about
                 the project.</li>
         </ul>
 
@@ -119,7 +118,7 @@
 
     <h3>Viewing User Data</h3>
     <div>
-        <p>Select "View User Data" from the menu to display a list of user data relevant to the email campaigns.</p>
+        <p>Select "View User Data" from the menu to display a list of user data , filter and select users to send email.</p>
     </div>
 
 
