--- a/Front-end/src/app/email-module/send-email/send-email.component.html
+++ b/Front-end/src/app/email-module/send-email/send-email.component.html
@@ -1,3 +1,13 @@
+<div class="selected-users-box">
+  <h3>Selected Users ({{ selectedUsers.length }})</h3>
+  <ul>
+    <li *ngFor="let user of selectedUsers">
+      <strong>Name:</strong> {{ user.name }} <br>
+      <strong>Email:</strong> {{ user.email }}
+    </li>
+  </ul>
+</div>
+
 <h2>Select an Email Template</h2>
 <div class="template-container">
   <div class="card" *ngFor="let template of templates" (click)="selectTemplate(template)">
