--- a/Front-end/src/app/sms-module/sms-menu/sms-menu.component.html
+++ b/Front-end/src/app/sms-module/sms-menu/sms-menu.component.html
@@ -25,10 +25,7 @@
                             <a class="nav-link" [class.active]="selectedMenu === 'configure-template'" (click)="selectMenu('configure-template')">Configure Template</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" [class.active]="selectedMenu === 'view-user-data'" (click)="selectMenu('view-user-data')">View User Data</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" [class.active]="selectedMenu === 'upload-user-data'" (click)="selectMenu('upload-user-data')">Upload User Data</a>
+                            <a class="nav-link" [class.active]="selectedMenu === 'upload-user-data'" (click)="selectMenu('upload-user-data')">Select Users</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" [class.active]="selectedMenu === 'history'" (click)="selectMenu('history')">History</a>
