--- a/Front-end/src/app/sms-module/sms-menu/sms-menu.component.css
+++ b/Front-end/src/app/sms-module/sms-menu/sms-menu.component.css
@@ -80,7 +80,7 @@ p {
 .main-content {
     flex: 1; /* Takes the remaining space */
     padding: 20px;
-    background-color: #fde5cd;
+    background-color: #FFF1E3;
     overflow-y: auto;
 }
 
