--- a/Front-end/src/app/sms-module/upload-user-data/upload-user-data.component.css
+++ b/Front-end/src/app/sms-module/upload-user-data/upload-user-data.component.css
@@ -12,7 +12,7 @@
   .container {
     max-width: 100vw;
     margin: 0 auto;
-    padding: 20px;
+    padding: 10px;
     border-radius: 5px;
   }
   
@@ -21,9 +21,14 @@
     justify-content: space-between;
     align-items: center;
   }
-  
-  .actions button {
-    margin-left: 10px;
+
+  .actions{
+    top: 5%;
+    right: 20px;
+    position: absolute;
+    display: flex;
+    gap: 10px;
+    align-items: center;
   }
   
   .popupform,
@@ -120,14 +125,17 @@
   }
   
   .actions button{
-    padding: 10px 20px;
-    background-color: #0a316c;
-    color: white;
+    padding: 0.7rem;
+    padding-inline: 2rem;
+    background-color: #3b1f03;
     border: none;
     border-radius: 5px;
+    color: white;
     cursor: pointer;
-
+    font-size: 1rem;
   }
+
+  
 
   .template-content{
     margin-top: 20px;
