--- a/Front-end/src/styles.css
+++ b/Front-end/src/styles.css
@@ -1,48 +1,49 @@
 /* Reset margin and padding for html and body */
-html, body {
-    margin: 0;
-    padding: 0;
-    height: 100%;
-    width: 100%;
-}
 
 @import "primeicons/primeicons.css";
+@import "ag-grid-community/styles/ag-grid.css";
+@import "ag-grid-community/styles/ag-theme-quartz.css";
+html,
+body {
+  margin: 0;
+  padding: 0;
+  height: 100%;
+  width: 100%;
+}
 
-*{
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
+
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
 
 /* Make sure the app-root takes full height and width */
 app-root {
-    display: block;
-    height: 100%;
-    width: 100%;
+  display: block;
+  height: 100%;
+  width: 100%;
 }
 
-.p-tooltip-text{
-    padding: 10px;
+.p-tooltip-text {
+  padding: 10px;
 }
-.p-tooltip{
-    margin-left: 10px;
-}
-
-.p-tooltip-arrow{
-    display: none;
+.p-tooltip {
+  margin-left: 10px;
 }
 
-
-
-
-.p-toast-message-text{
-    padding: 10px;
+.p-tooltip-arrow {
+  display: none;
 }
 
-.p-icon{
-    display: none;
+.p-toast-message-text {
+  padding: 10px;
 }
 
-.p-ripple{
-    display: block !important;
+.p-icon {
+  display: none;
+}
+
+.p-ripple {
+  display: block !important;
 }
