--- a/Front-end/src/app/whatsapp-module/select-template/select-template.component.css
+++ b/Front-end/src/app/whatsapp-module/select-template/select-template.component.css
@@ -6,6 +6,8 @@ body {
   .Container {
     background-color: #FDE5CD;
     display: flex;
+    justify-content: center;
+    align-items: center;
     flex-direction: column;
     overflow: hidden;
     position: relative;
@@ -184,3 +186,56 @@ body {
     color: #1B4CA1;
     font-weight: 500;
   }
+  /*Loading animation css*/
+  .loader {
+    margin-top: 25%;
+    height: 50px;
+    width: max-content;
+    font-size: 20px;
+    font-weight: 800;
+    font-family: monospace;
+    letter-spacing: 1em;
+    color: #000000;
+    filter: drop-shadow(0 0 10px);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+ 
+ .loader span {
+  animation: loading6454 1.75s ease infinite;
+ }
+ 
+ .loader span:nth-child(2) {
+  animation-delay: 0.25s;
+ }
+ 
+ .loader span:nth-child(3) {
+  animation-delay: 0.5s;
+ }
+ 
+ .loader span:nth-child(4) {
+  animation-delay: 0.75s;
+ }
+ 
+ .loader span:nth-child(5) {
+  animation-delay: 1s;
+ }
+ 
+ .loader span:nth-child(6) {
+  animation-delay: 1.25s;
+ }
+ 
+ .loader span:nth-child(7) {
+  animation-delay: 1.5s;
+ }
+ 
+ @keyframes loading6454 {
+  0%, 100% {
+   transform: translateY(0);
+  }
+ 
+  50% {
+   transform: translateY(-10px);
+  }
+ }
