--- a/Front-end/src/app/whatsapp-module/configure-template/configure-template.component.css
+++ b/Front-end/src/app/whatsapp-module/configure-template/configure-template.component.css
@@ -51,7 +51,7 @@ label {
   width: 100%;
   padding: 8px;
   margin-top: 10px;
-  font-size: 16px;
+  font-size: 15px;
   border: 1.5px solid #848484;
   border-radius: 0px;
   background-color: transparent !important;
@@ -105,12 +105,57 @@ background-color: #4CAF50; /* Green */
 }
 
 
+/*Loading animation css*/
+.loader {
+  margin-left: 50%;
+  margin-top: 25%;
+  height: 50px;
+  width: max-content;
+  font-size: 20px;
+  font-weight: 800;
+  font-family: monospace;
+  letter-spacing: 1em;
+  color: #000000;
+  filter: drop-shadow(0 0 10px);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 
-.variables{
-display: flex;
-width: 35%;
-flex-direction: column;
-gap: 10px;
-margin-top: 2rem;
-margin-left: 2rem;
+.loader span {
+animation: loading6454 1.75s ease infinite;
+}
+
+.loader span:nth-child(2) {
+animation-delay: 0.25s;
+}
+
+.loader span:nth-child(3) {
+animation-delay: 0.5s;
+}
+
+.loader span:nth-child(4) {
+animation-delay: 0.75s;
+}
+
+.loader span:nth-child(5) {
+animation-delay: 1s;
+}
+
+.loader span:nth-child(6) {
+animation-delay: 1.25s;
+}
+
+.loader span:nth-child(7) {
+animation-delay: 1.5s;
+}
+
+@keyframes loading6454 {
+0%, 100% {
+ transform: translateY(0);
+}
+
+50% {
+ transform: translateY(-10px);
+}
 }
