--- a/Front-end/src/app/whatsapp-module/upload-user-data/upload-user-data.component.css
+++ b/Front-end/src/app/whatsapp-module/upload-user-data/upload-user-data.component.css
@@ -10,64 +10,76 @@
 }
 
 .container {
-  max-width: 600px;
+  max-width: 100vw;
   margin: 0 auto;
-  padding: 20px;
-  border: 1px solid #ddd;
+  padding: 10px;
   border-radius: 5px;
 }
-
+.sub-Container{
+  display: flex;
+  flex-direction: column;
+  gap: 30px;
+}
+.search-sort{
+  display: flex;
+  gap: 10px;
+  width: 50%;
+}
+.search-sort input{
+  width: 80%;
+  height: 40px;
+  border-radius: 10px;
+  padding-inline: 10px;
+  border: solid #2d435c 2px;
+  outline: none;
+}
 .header {
   display: flex;
   justify-content: space-between;
   align-items: center;
 }
 
-.actions button {
-  margin-left: 10px;
-  background-color: #007bff;
-  border-radius: 10px;
-  padding: 10px;
-  border: none;
-  color: white;
-}
-
-.popupform,
-.file-popup {
-  background-color: #f9f9f9;
-  padding: 20px;
-  border: 1px solid #ddd;
-  border-radius: 5px;
-  margin-top: 10px;
-}
-
-.popupform form,
-.file-popup div {
+.actions, .search-sort, .buttons {
+  right: 20px;
   display: flex;
-  flex-direction: column;
+  justify-content: space-between;
+  gap: 10px;
+  align-items: center;
 }
 
-.popupform input,
-.file-popup input {
-  margin-bottom: 10px;
-  padding: 10px;
-  border: 1px solid #ccc;
-  border-radius: 5px;
+.AddOneUserForm form{
+display: flex;
+gap: 3%;
+align-items: center;
+}
+.AddOneUserForm input{
+  height: 2.5rem;
+  border-radius: 10px;
+  padding-inline: 10px;
+  border: solid #2d435c 2px;
 }
 
-.submit,
-.close {
+.submit {
   padding: 10px 20px;
   border: none;
-  background-color: #007bff;
+  background-color: #0a316c;
   color: white;
   cursor: pointer;
   border-radius: 5px;
-  margin-top: 10px;
 }
 
 .close {
+  color: white;
+  height: 30px;
+  width: 30px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   background-color: #dc3545;
+  border-radius: 50%;
+  border: none;
+  transform: rotate(45deg);
+  cursor: pointer;
 }
 
 .filters {
@@ -116,11 +128,51 @@
   margin-top: 20px;
 }
 
+
+.actions .optional-button {
+  display: flex;
+  align-items: center;
+  padding: 0.7rem;
+  padding-inline: 2rem;
+  background-color: #007bff;
+  border: none;
+  border-radius: 5px;
+  color: white;
+  cursor: pointer;
+  font-size: 1rem;
+}
 .send-button {
-  padding: 10px 20px;
   background-color: #28a745;
+  display: flex;
+  align-items: center;
+  padding: 0.7rem;
+  padding-inline: 2rem;
+  border: none;
+  border-radius: 5px;
+  color: white;
+  cursor: pointer;
+  font-size: 1rem;
+}
+
+.template-content {
+  margin-top: 20px;
+  background-color: white;
+  padding: 20px;
+  border-radius: 8px;
+}
+
+.template-content button {
+  padding: 10px 20px;
+  background-color: #0a316c;
   color: white;
   border: none;
   border-radius: 5px;
   cursor: pointer;
+  position: absolute;
+  right: 5%;
+  bottom: 10%;
+}
+
+.template-content p {
+  margin-top: 20px;
 }
