--- a/Front-end/src/app/whatsapp-module/view-user-data/view-user-data.component.css
+++ b/Front-end/src/app/whatsapp-module/view-user-data/view-user-data.component.css
@@ -1,127 +1,125 @@
 .form-group {
-    margin-bottom: 15px;
-  }
-  .btn-primary {
-    background-color: #007bff;
-    border-color: #007bff;
-  }
-  .alert {
-    margin-top: 20px;
-  }
-  
-  .container {
-    max-width: 600px;
-    margin: 0 auto;
-    padding: 20px;
-    border: 1px solid #ddd;
-    border-radius: 5px;
-  }
-  
-  .header {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-  }
-  
-  .actions button {
-    margin-left: 10px;
-    background-color: #007bff;
-    border-radius: 10px;
-    padding: 10px;
-    border: none;
-    color: white;
-  }
-  
-  .popupform,
-  .file-popup {
-    background-color: #f9f9f9;
-    padding: 20px;
-    border: 1px solid #ddd;
-    border-radius: 5px;
-    margin-top: 10px;
-  }
-  
-  .popupform form,
-  .file-popup div {
-    display: flex;
-    flex-direction: column;
-  }
-  
-  .popupform input,
-  .file-popup input {
-    margin-bottom: 10px;
-    padding: 10px;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-  }
-  
-  .submit,
-  .close {
-    padding: 10px 20px;
-    border: none;
-    background-color: #007bff;
-    color: white;
-    cursor: pointer;
-    border-radius: 5px;
-    margin-top: 10px;
-  }
-  
-  .close {
-    background-color: #dc3545;
-  }
-  
-  .filters {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    margin-top: 20px;
-  }
-  
-  .filters input {
-    padding: 10px;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-    flex-grow: 1;
-    margin-right: 10px;
-  }
-  
-  .filters button {
-    padding: 10px 20px;
-    border: none;
-    background-color: #007bff;
-    color: white;
-    cursor: pointer;
-    border-radius: 5px;
-  }
-  
-  .user-list table {
-    width: 100%;
-    border-collapse: collapse;
-    margin-top: 20px;
-  }
-  
-  .user-list th,
-  .user-list td {
-    border: 1px solid #ddd;
-    padding: 8px;
-    text-align: left;
-  }
-  
-  .user-list th {
-    background-color: #f2f2f2;
-  }
-  
-  .bottom {
-    text-align: right;
-    margin-top: 20px;
-  }
-  
-  .send-button {
-    padding: 10px 20px;
-    background-color: #28a745;
-    color: white;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-  }
-  
+  margin-bottom: 15px;
+}
+
+.btn-primary {
+  background-color: #007bff;
+  border-color: #007bff;
+}
+
+.alert {
+  margin-top: 20px;
+}
+
+.container {
+  max-width: 100vw;
+  margin: 0 auto;
+  padding: 10px;
+  border-radius: 5px;
+}
+
+.sub-Container {
+  display: flex;
+  flex-direction: column;
+  gap: 30px;
+}
+
+.search-sort {
+  display: flex;
+  gap: 10px;
+  width: 50%;
+}
+
+.search-sort input {
+  width: 80%;
+  height: 40px;
+  border-radius: 10px;
+  padding-inline: 10px;
+  border: solid #2d435c 2px;
+  outline: none;
+}
+
+.header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.actions,
+.search-sort,
+.buttons {
+  right: 20px;
+  display: flex;
+  justify-content: space-between;
+  gap: 10px;
+  align-items: center;
+}
+
+.AddOneUserForm form {
+  display: flex;
+  gap: 3%;
+  align-items: center;
+}
+
+.AddOneUserForm input {
+  height: 2.5rem;
+  border-radius: 10px;
+  padding-inline: 10px;
+  border: solid #2d435c 2px;
+}
+
+.submit {
+  padding: 10px 20px;
+  border: none;
+  background-color: #0a316c;
+  color: white;
+  cursor: pointer;
+  border-radius: 5px;
+}
+
+.close {
+  color: white;
+  height: 30px;
+  width: 30px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #dc3545;
+  border-radius: 50%;
+  border: none;
+  transform: rotate(45deg);
+  cursor: pointer;
+}
+
+
+.bottom {
+  text-align: right;
+  margin-top: 20px;
+}
+
+
+.actions .optional-button {
+  display: flex;
+  align-items: center;
+  padding: 0.7rem;
+  padding-inline: 2rem;
+  background-color: #007bff;
+  border: none;
+  border-radius: 5px;
+  color: white;
+  cursor: pointer;
+  font-size: 1rem;
+}
+
+.send-button {
+  background-color: #28a745;
+  display: flex;
+  align-items: center;
+  padding: 0.7rem;
+  padding-inline: 2rem;
+  border: none;
+  border-radius: 5px;
+  color: white;
+  cursor: pointer;
+  font-size: 1rem;
+}
